Bug 1773823 - Remove devPixelsPerPx special cases in LookAndFeel. r=stransky

LookAndFeel::GetFont should always return CSS font sizes.

Differential Revision: https://phabricator.services.mozilla.com/D149491